--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <script>
 var m = window.location.href.split("/");
 var l = m[m.length-1];
-window.location.href = "github.com/cm-tech/"+l;
+window.location.assign("http://github.com/cm-tech/"+l);
 </script>
 </body>
 </html>
