--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Orbitron:400,700' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Orbitron:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,7 +15,7 @@
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
           <div class="flipper" style="height:150px;width:150px">
             <div class="front">
-              <img class="person-avatar" src="http://modderme123.github.io/img/profile.svg">
+              <img class="person-avatar" src="//modderme123.github.io/img/profile.svg">
             </div>
             <div class="back">
               <p>Web Developer, Javascript Ninja, CSS Wizard, and Web Lover. ModderMe123 comes up with ideas and works with Coler706 to create them</p>
@@ -28,7 +28,7 @@
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
           <div class="flipper" style="height:150px;width:150px">
             <div class="front">
-              <img class="person-avatar cole" src="http://coler706.github.io/files/avatar.svg">
+              <img class="person-avatar cole" src="//coler706.github.io/files/avatar.svg">
             </div>
             <div class="back">
               <p>Web Developer, Javascript Ninja, CSS Wizard, and Web Lover. Coler706 likes mathematical and simulation based programs alot, but also likes making games.</p>
@@ -45,7 +45,7 @@
           <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
             <div class="flipper" style="height:150px;width:150px">
               <div class="front">
-                <img class="person-avatar" src="https://avatars3.githubusercontent.com/u/14354551?v=3&s=400">
+                <img class="person-avatar" src="//avatars3.githubusercontent.com/u/14354551?v=3&s=400">
               </div>
               <div class="back">
                 <p>A Guy named Tripp Lyons</p>
@@ -60,7 +60,7 @@
       <div class="projects" style="text-align:center"></div>
     </div>
     <div id="center" class="center slot" onmouseenter="closeBoth()">
-      <img src="MCTechLogo.png" class="CM-logo">
+      <img src="//avatars3.githubusercontent.com/u/18245921?v=3&s=200" class="CM-logo">
       <div class="hello">
         <h3 style="text-align:center">Welcome To CM-Tech</h3>
         <p>CM-Tech is a team of coders working together to create cool programs. You can find most of them in the project section.</p>
