--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div id="left" class="left slot" onmouseenter="hoverLeft()" style="text-align:center" ontouchstart="document.getElementById('left').classList.remove('more')">
       <h3 style="text-align:center">Who We Are</h3>
-      <p>Hi! We are the backend of CM-Tech. We were started by 2 friends who love coding and working together on projects. Hover over our GitHub profiles to read a little bit more about us.</p>
+      <p>Hi! We are the backend of CM-Tech. CM-Tech was started by 2 friends who love coding and working together on projects. Hover over our GitHub profiles to read a little bit more about us.</p>
       <div class="m123" style="width:150px">
         <p>ModderMe123</p>
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
