--- a/index.html
+++ b/index.html
@@ -1,76 +1,230 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
 <head>
-  <title>CM-Tech</title>
-  <link href='//fonts.googleapis.com/css?family=Orbitron:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CM-Tech</title>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="sass/style.scss">
+
 </head>
 
 <body>
-  <div class="container">
-    <div id="left" class="left slot" onmouseenter="hoverLeft()" style="text-align:center" ontouchstart="document.getElementById('left').classList.remove('more')">
-      <h3 style="text-align:center">Who We Are</h3>
-      <p>Hi! We are the backend of CM-Tech. CM-Tech was started by 2 friends who love coding and working together on projects. Hover over our GitHub profiles to read a little bit more about us.</p>
-      <div class="m123" style="width:150px">
-        <p>ModderMe123</p>
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
-          <div class="flipper" style="height:150px;width:150px">
-            <div class="front">
-              <img class="person-avatar" src="//avatars2.githubusercontent.com/u/14153763?s=150">
+    <div class="container" id="main-wrapper">
+        <div class="columns">
+            <div class="column">
+                <div class="box has-background-black">
+                    <nav class="navbar is-transparent" id="navbar" role="navigation" aria-label="main navigation">
+                        <div class="container">
+                            <a class="navbar-item" href="#intro-header">
+                                Intro
+                            </a>
+                            <a class="navbar-item" href="#people-header">
+                                Team
+                            </a>
+                            <a class="navbar-item nav-center" href="#top-header">
+                                <img src="/img/cm-logo-g.svg" class="nav-logo" alt="C">
+                            </a>
+                            <a class="navbar-item nav-right" href="#portfolio-header">
+                                Work
+                            </a>
+                            <a class="navbar-item nav-right">
+                                Talk
+                            </a>
+
+                        </div>
+                    </nav>
+
+                    <span id="top-header"></span>
+                    <section class="section top-section" id="top">
+                        <div class="spacer">
+                        </div>
+                        <div class="columns is-centered">
+                            <div class="column is-four-fifths">
+                                <div class="columns is-centered is-multiline">
+                                    <div class="column">
+                                        <h1 class="gold">CM-Tech</h1>
+                                        <hr class="dash-hr" />
+                                        <p class="top-tagline">
+                                            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Welcome</h1>
+                                            <h2 class="subtitle is-size-4-desktop">CM-Tech is a team of coders working together to create cool programs. You can find most of them in the project section.</h2>
+                                        </p>
+                                    </div>
+                                    <div class="column">
+                                        <figure class="image">
+                                            <img src="/img/cm-logo-s.png" class="start-logo" alt="C">
+                                        </figure>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </section>
+                    <span id="intro-header"></span>
+                    <section class="section is-medium is-primary has-text-centered is-long">
+                        <div class="container">
+                            <div class="columns is-centered">
+                                <div class="column is-four-fifths">
+                                    <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">More About Us:</h1>
+                                    <h2 class="subtitle is-size-5-desktop">
+                                        We are awesome!
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <span id="people-header"></span>
+                    <section class="section people-section">
+                        <div class="columns is-centered">
+                            <div class="column is-four-fifths">
+                                <div class="columns is-centered is-multiline">
+                                    <div class="column has-text-centered">
+                                        <figure class="image">
+                                            <img src="/img/ckgold-s.svg" class="start-logo" alt="C">
+                                        </figure>
+                                        <h1 class="gold">Cole</h1>
+                                        <h2 class="gold">Kissane</h2>
+                                        <p class="top-tagline">
+                                            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Designer <br/> Developer <br/> Mathematician <br/> Artist</h1>
+                                            <h2 class="subtitle is-size-4-desktop">I have an appreciation for people, learning, and work with passion.</h2>
+                                        </p>
+                                    </div>
+                                    <div class="column has-text-centered">
+                                        <figure class="image">
+                                            <img src="//avatars2.githubusercontent.com/u/14153763?" class="start-logo" alt="C">
+                                        </figure>
+                                        <h1 class="gold">Milo</h1>
+                                        <h2 class="gold">Mighdoll</h2>
+                                        <p class="top-tagline">
+                                            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Epic <br/> Developer <br/> Coder <br/> Ninja</h1>
+                                            <h2 class="subtitle is-size-4-desktop">I'm a student that likes to code cool simulations (especially fluid simulations). I love bleeding edge things. I watch out for bugs and won't rest until I squash them.</h2>
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </section>
+
+                    <!-- <span id="skills-header"></span>
+                    <section class="section skills has-text-centered">
+                        <div class="columns is-centered is-multiline">
+                            <div class="column is-12-mobile is-half-tablet is-3-desktop">
+                                <div class="box has-text-white">
+                                    <figure class="image">
+                                        <img src="img/icons/design.svg" class="fc skill-icon" />
+                                    </figure>
+                                    <h1 class="title is-size-4 has-text-white is-spaced">Designer</h1>
+                                    <p class="skill-intro">I value simplicity, reliable design patterns, and powerful yet intuitive interfaces.</p>
+                                    <p class="list-title has-text-white has-text-weight-bold">Things I enjoy designing:</p>
+                                    <p class="skill-cont">UX, UI, Web, Mobile, Apps, Algorithms, Simulations, Logos</p>
+                                    <p class="list-title has-text-white has-text-weight-bold">Design Tools:</p>
+                                    <ul>
+                                        <li>Whiteboard</li>
+                                        <li>Figma</li>
+                                        <li>Blender</li>
+                                        <li>Good ol' Pen &amp; Paper</li>
+                                        <li>Inkscape</li>
+                                        <li>Gimp</li>
+                                        <li>Calculator</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="column is-12-mobile is-half-tablet is-3-desktop">
+                                <div class="box has-text-white">
+                                    <figure class="image">
+                                        <img src="img/icons/frontend.svg" class="fc skill-icon" />
+                                    </figure>
+                                    <h1 class="title is-size-4 has-text-white is-spaced">Web Developer</h1>
+                                    <p class="skill-intro">Building apps for the browser.</p>
+                                    <p class="list-title has-text-white has-text-weight-bold">Front End Languages:</p>
+                                    <p class="skill-cont">HTML, CSS, Sass, JS, TS, React </p>
+                                    <p class="list-title has-text-white has-text-weight-bold">Dev Tools:</p>
+                                    <ul>
+                                        <li>VS Code</li>
+                                        <li>React</li>
+                                        <li>Webpack</li>
+                                        <li>Code Sandbox</li>
+                                        <li>Github</li>
+                                        <li>Terminal</li>
+                                        <li>Bootstrap</li>
+                                        <li>Bulma</li>
+                                        <li>Terminal (Again)</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="column is-12-mobile is-half-tablet is-3-desktop">
+                                <div class="box has-text-white">
+                                    <figure class="image">
+                                        <img src="img/icons/allelse.svg" class="fc skill-icon" />
+                                    </figure>
+                                    <h1 class="title is-size-4 has-text-white is-spaced">Other Developer</h1>
+                                    <p class="skill-intro">My projects take me to all sorts of areas</p>
+
+
+                                    <p class="list-title has-text-white has-text-weight-bold">Including:</p>
+                                    <p class="skill-cont">from C++ window system frameworks, to C# and nodeJS servers; from Python3 machine learning and GANs to Java, Kotlin, and Swift mobile apps.</p>
+                                    <p class="list-title has-text-white has-text-weight-bold">Languages I've Used Recently:</p>
+                                    <ul>
+                                        <li>Java</li>
+                                        <li>GLSL</li>
+                                        <li>C++</li>
+                                        <li>C#</li>
+                                        <li>HTML, CSS, Sass, JS, TS, JSX, TSX</li>
+                                        <li>Python</li>
+                                        <li>Lua</li>
+                                        <li>Swift</li>
+                                        <li>lisp (mit-scheme)</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="column is-12-mobile is-half-tablet is-3-desktop">
+                                <div class="box has-text-white">
+                                    <figure class="image">
+                                        <img src="img/icons/math.svg" class="fc skill-icon" />
+                                    </figure>
+                                    <h1 class="title is-size-4 has-text-white is-spaced">Mathematician</h1>
+                                    <p class="skill-intro">I think math is fantastic. I integrate this into my programming, and have a love of form.</p>
+                                    <p class="list-title has-text-white has-text-weight-bold">Experience Includes:</p>
+                                    <ul>
+                                        <li>Calculus</li>
+                                        <li>Game Theory</li>
+                                        <li>Group Theory</li>
+                                        <li>Ring Theory</li>
+                                        <li>Linear Algebra</li>
+                                        <li>Convex Set Geometry</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </section> -->
+
+                    <span id="portfolio-header"></span>
+
+                    <section class="section projects is-medium is-white has-text-centered">
+                        <div class="container">
+                            <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">Mini Portfolio</h1>
+                            <h2 class="subtitle is-size-5-desktop">Here are a few projects We've worked on.</h2>
+                            <div class="project-grid">
+                                <div class="columns is-multiline is-mobile" id="project-grid-columns">
+
+
+                                </div>
+                                <div class="columns is-centered">
+                                    <div class="column"><a class="button is-danger is-outlined is-rounded is-medium" href="https://cm-tech.github.io/portfolio" target="_blank"><span>See more on CM-Tech</span></a></div>
+                                </div>
+                            </div>
+                    </section>
+                    </div>
+                </div>
             </div>
-            <div class="back">
-              <p>Web Developer, Javascript Ninja, CSS Wizard, and Web Lover. ModderMe123 comes up with ideas and works with Coler706 to create them</p>
-            </div>
-          </div>
         </div>
-      </div>
-      <div class="c706" style="width:150px">
-        <p>Coler706</p>
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
-          <div class="flipper" style="height:150px;width:150px">
-            <div class="front">
-              <img class="person-avatar cole" src="//avatars2.githubusercontent.com/u/9607290?s=150">
-            </div>
-            <div class="back">
-              <p>Web Developer, Javascript Ninja, CSS Wizard, and Web Lover. Coler706 likes mathematical and simulation based programs alot, but also likes making games.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="credits" style="background:inherit;text-align:center;bottom:15px">
-        <button onclick="document.getElementById('left').classList.toggle('more')">members that were added later</button>
-      </div>
-      <div id="more" class="more-members" onmouseleave="document.getElementById('left').classList.toggle('more')">
-        <div class="tripp" style="width:150px;z-index: 200;">
-          <p>Tripp Lyons</p>
-          <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="background:inherit;">
-            <div class="flipper" style="height:150px;width:150px">
-              <div class="front">
-                <img class="person-avatar" src="//avatars3.githubusercontent.com/u/14354551?s=150">
-              </div>
-              <div class="back">
-                <p>A Guy named Tripp Lyons</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="right" class="right slot" onmouseenter="hoverRight()">
-      <h3 style="text-align:center">Projects</h3>
-      <div class="projects" style="text-align:center"></div>
-    </div>
-    <div id="center" class="center slot" onmouseenter="closeBoth()">
-      <img src="//avatars3.githubusercontent.com/u/18245921?s=150" class="CM-logo">
-      <div class="hello">
-        <h3 style="text-align:center">Welcome To CM-Tech</h3>
-        <p>CM-Tech is a team of coders working together to create cool programs. You can find most of them in the project section.</p>
-      </div>
-      <div class="credits">Random Credits</div>
-    </div>
-  </div>
-  <script src="main.js">
-  </script>
+        <script src="js/index.js"></script>
 </body>
 
 </html>
