Redirect on normal github pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CM-Tech</title>
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="sass/style.scss">
-
+    <script>if(window.location.host=="cm-tech.github.io") window.location.host="www.cm-ht.ml";</script>
 </head>
 
 <body>
