--- a/index.html
+++ b/index.html
@@ -1,116 +1,126 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CM-Tech</title>
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
-    <link rel="stylesheet" href="sass/style.scss">
-    <script>if(window.location.host=="cm-tech.github.io") window.location.host="www.cm-ht.ml";</script>
-</head>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css" />
+    <link rel="stylesheet" href="sass/style.scss" />
+    <script>
+      if (window.location.host == "cm-tech.github.io") window.location.host = "www.cm-ht.ml";
+    </script>
+  </head>
 
-<body>
+  <body>
     <div class="container" id="main-wrapper">
-        <div class="columns">
-            <div class="column">
-                <div class="box has-background-black">
-                    <nav class="navbar is-transparent" id="navbar" role="navigation" aria-label="main navigation">
-                        <div class="container">
-                            <a class="navbar-item" href="#intro-header">
-                                Intro
-                            </a>
-                            <a class="navbar-item" href="#people-header">
-                                Team
-                            </a>
-                            <a class="navbar-item nav-center" href="#top-header">
-                                <img src="/img/cm-logo-g.svg" class="nav-logo" alt="C">
-                            </a>
-                            <a class="navbar-item nav-right" href="#portfolio-header">
-                                Work
-                            </a>
-                            <a class="navbar-item nav-right">
-                                Talk
-                            </a>
+      <div class="columns">
+        <div class="column">
+          <div class="box has-background-black">
+            <nav class="navbar is-transparent" id="navbar" role="navigation" aria-label="main navigation">
+              <div class="container">
+                <a class="navbar-item" href="#intro-header">
+                  Intro
+                </a>
+                <a class="navbar-item" href="#people-header">
+                  Team
+                </a>
+                <a class="navbar-item nav-center" href="#top-header">
+                  <img src="/img/cm-logo-g.svg" class="nav-logo" alt="C" />
+                </a>
+                <a class="navbar-item nav-right" href="#portfolio-header">
+                  Work
+                </a>
+                <a class="navbar-item nav-right">
+                  Talk
+                </a>
+              </div>
+            </nav>
 
-                        </div>
-                    </nav>
+            <span id="top-header"></span>
+            <section class="section top-section" id="top">
+              <div class="spacer"></div>
+              <div class="columns is-centered">
+                <div class="column is-four-fifths">
+                  <div class="columns is-centered is-multiline">
+                    <div class="column">
+                      <h1 class="gold">CM-Tech</h1>
+                      <hr class="dash-hr" />
+                      <div class="top-tagline">
+                        <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Welcome</h1>
+                        <h2 class="subtitle is-size-4-desktop">
+                          CM-Tech is a team of coders working together to create cool programs. You can find most of them in the project section.
+                        </h2>
+                      </div>
+                    </div>
+                    <div class="column">
+                      <figure class="image">
+                        <img src="/img/cm-logo-s.png" class="start-logo" alt="C" />
+                      </figure>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <span id="intro-header"></span>
+            <section class="section is-medium is-primary has-text-centered is-long">
+              <div class="container">
+                <div class="columns is-centered">
+                  <div class="column is-four-fifths">
+                    <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">More About Us:</h1>
+                    <h2 class="subtitle is-size-5-desktop">
+                      We are awesome!
+                    </h2>
+                  </div>
+                </div>
+              </div>
+            </section>
 
-                    <span id="top-header"></span>
-                    <section class="section top-section" id="top">
-                        <div class="spacer">
-                        </div>
-                        <div class="columns is-centered">
-                            <div class="column is-four-fifths">
-                                <div class="columns is-centered is-multiline">
-                                    <div class="column">
-                                        <h1 class="gold">CM-Tech</h1>
-                                        <hr class="dash-hr" />
-                                        <p class="top-tagline">
-                                            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Welcome</h1>
-                                            <h2 class="subtitle is-size-4-desktop">CM-Tech is a team of coders working together to create cool programs. You can find most of them in the project section.</h2>
-                                        </p>
-                                    </div>
-                                    <div class="column">
-                                        <figure class="image">
-                                            <img src="/img/cm-logo-s.png" class="start-logo" alt="C">
-                                        </figure>
-                                    </div>
+            <span id="people-header"></span>
+            <section class="section people-section">
+              <div class="columns is-centered">
+                <div class="column is-four-fifths">
+                  <div class="columns is-centered is-multiline">
+                    <div class="column has-text-centered">
+                      <figure class="image">
+                        <img src="/img/ckgold-s.svg" class="start-logo" alt="C" />
+                      </figure>
+                      <h1 class="gold">Cole</h1>
+                      <h2 class="gold">Kissane</h2>
+                      <div class="top-tagline">
+                        <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
+                          Designer <br />
+                          Developer <br />
+                          Mathematician <br />
+                          Artist
+                        </h1>
+                        <h2 class="subtitle is-size-4-desktop">I have an appreciation for people, learning, and work with passion.</h2>
+                      </div>
+                    </div>
+                    <div class="column has-text-centered">
+                      <figure class="image">
+                        <img src="//avatars2.githubusercontent.com/u/14153763?" class="start-logo" alt="C" />
+                      </figure>
+                      <h1 class="gold">Milo</h1>
+                      <h2 class="gold">Mighdoll</h2>
+                      <div class="top-tagline">
+                        <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
+                          Epic <br />
+                          Developer <br />
+                          Coder <br />
+                          Ninja
+                        </h1>
+                        <h2 class="subtitle is-size-4-desktop">
+                          I'm a student that likes to code cool simulations (especially fluid simulations). I love bleeding edge things. I watch out
+                          for bugs and won't rest until I squash them.
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
 
-                                </div>
-                            </div>
-
-                        </div>
-                    </section>
-                    <span id="intro-header"></span>
-                    <section class="section is-medium is-primary has-text-centered is-long">
-                        <div class="container">
-                            <div class="columns is-centered">
-                                <div class="column is-four-fifths">
-                                    <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">More About Us:</h1>
-                                    <h2 class="subtitle is-size-5-desktop">
-                                        We are awesome!
-                                    </h2>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-
-                    <span id="people-header"></span>
-                    <section class="section people-section">
-                        <div class="columns is-centered">
-                            <div class="column is-four-fifths">
-                                <div class="columns is-centered is-multiline">
-                                    <div class="column has-text-centered">
-                                        <figure class="image">
-                                            <img src="/img/ckgold-s.svg" class="start-logo" alt="C">
-                                        </figure>
-                                        <h1 class="gold">Cole</h1>
-                                        <h2 class="gold">Kissane</h2>
-                                        <p class="top-tagline">
-                                            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Designer <br/> Developer <br/> Mathematician <br/> Artist</h1>
-                                            <h2 class="subtitle is-size-4-desktop">I have an appreciation for people, learning, and work with passion.</h2>
-                                        </p>
-                                    </div>
-                                    <div class="column has-text-centered">
-                                        <figure class="image">
-                                            <img src="//avatars2.githubusercontent.com/u/14153763?" class="start-logo" alt="C">
-                                        </figure>
-                                        <h1 class="gold">Milo</h1>
-                                        <h2 class="gold">Mighdoll</h2>
-                                        <p class="top-tagline">
-                                            <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">Epic <br/> Developer <br/> Coder <br/> Ninja</h1>
-                                            <h2 class="subtitle is-size-4-desktop">I'm a student that likes to code cool simulations (especially fluid simulations). I love bleeding edge things. I watch out for bugs and won't rest until I squash them.</h2>
-                                        </p>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                        </div>
-                    </section>
-
-                    <!-- <span id="skills-header"></span>
+            <!-- <span id="skills-header"></span>
                     <section class="section skills has-text-centered">
                         <div class="columns is-centered is-multiline">
                             <div class="column is-12-mobile is-half-tablet is-3-desktop">
@@ -204,27 +214,28 @@
 
                     </section> -->
 
-                    <span id="portfolio-header"></span>
+            <span id="portfolio-header"></span>
 
-                    <section class="section projects is-medium is-white has-text-centered">
-                        <div class="container">
-                            <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">Mini Portfolio</h1>
-                            <h2 class="subtitle is-size-5-desktop">Here are a few projects We've worked on.</h2>
-                            <div class="project-grid">
-                                <div class="columns is-multiline is-mobile" id="project-grid-columns">
-
-
-                                </div>
-                                <div class="columns is-centered">
-                                    <div class="column"><a class="button is-danger is-outlined is-rounded is-medium" href="https://cm-tech.github.io/portfolio" target="_blank"><span>See more on CM-Tech</span></a></div>
-                                </div>
-                            </div>
-                    </section>
+            <section class="section projects is-medium is-white has-text-centered">
+              <div class="container">
+                <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">Mini Portfolio</h1>
+                <h2 class="subtitle is-size-5-desktop">Here are a few projects We've worked on.</h2>
+                <div class="project-grid">
+                  <div class="columns is-multiline is-mobile" id="project-grid-columns"></div>
+                  <div class="columns is-centered">
+                    <div class="column">
+                      <a class="button is-danger is-outlined is-rounded is-medium" href="https://cm-tech.github.io/portfolio" target="_blank"
+                        ><span>See more on CM-Tech</span></a
+                      >
                     </div>
+                  </div>
                 </div>
-            </div>
+              </div>
+            </section>
+          </div>
         </div>
-        <script src="js/index.js"></script>
-</body>
-
+      </div>
+    </div>
+    <script src="js/index.js"></script>
+  </body>
 </html>
