--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<canvas id="c"></canvas>
-		<section class="hero is-fullheight">
+		<section id="top" class="hero is-fullheight">
 			<div class="hero-body">
 				<p style="width: 100%; font-size: 200px; line-height: 200px; font-family: 'Arcon'; color: white;">
 					Hello! We're <span class="gold">CM-Tech</span>. <br />
@@ -21,10 +21,12 @@
 				</p>
 			</div>
 		</section>
+
 		<div class="container" id="main-wrapper">
 			<div class="columns">
 				<div class="column">
 					<div class="box has-background-black">
+						<div class="spacer"></div>
 						<nav class="navbar is-transparent" id="navbar" role="navigation" aria-label="main navigation">
 							<div class="container">
 								<a class="navbar-item" href="#intro-header">
@@ -45,49 +47,6 @@
 							</div>
 						</nav>
 
-						<span id="top-header"></span>
-						<section class="section top-section" id="top">
-							<div class="spacer"></div>
-							<div class="columns is-centered">
-								<div class="column is-four-fifths">
-									<div class="columns is-centered is-multiline">
-										<div class="column">
-											<h1 class="gold">CM-Tech</h1>
-											<hr class="dash-hr" />
-											<div class="top-tagline">
-												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
-													Welcome
-												</h1>
-												<h2 class="subtitle is-size-4-desktop">
-													CM-Tech is a team of coders working together to create cool programs. You can find most of them in the project section.
-												</h2>
-											</div>
-										</div>
-										<div class="column">
-											<figure class="image">
-												<img src="/img/cm-logo-s.png" class="start-logo" alt="C" />
-											</figure>
-										</div>
-									</div>
-								</div>
-							</div>
-						</section>
-						<span id="intro-header"></span>
-						<section class="section is-medium is-primary has-text-centered is-long">
-							<div class="container">
-								<div class="columns is-centered">
-									<div class="column is-four-fifths">
-										<h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">
-											More About Us:
-										</h1>
-										<h2 class="subtitle is-size-5-desktop">
-											We are awesome!
-										</h2>
-									</div>
-								</div>
-							</div>
-						</section>
-
 						<span id="people-header"></span>
 						<section class="section people-section">
 							<div class="columns is-centered">
@@ -97,13 +56,12 @@
 											<figure class="image">
 												<img src="/img/ckgold-s.svg" class="start-logo" alt="C" />
 											</figure>
-											<h1 class="gold">Cole</h1>
-											<h2 class="gold">Kissane</h2>
+											<h1 class="gold">Cole K</h1>
 											<div class="top-tagline">
 												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
-													Designer <br />
-													Developer <br />
 													Mathematician <br />
+													Developer <br />
+													Ninja <br />
 													Artist
 												</h1>
 												<h2 class="subtitle is-size-4-desktop">
@@ -115,18 +73,16 @@
 											<figure class="image">
 												<img src="//avatars2.githubusercontent.com/u/14153763?" class="start-logo" alt="C" />
 											</figure>
-											<h1 class="gold">Milo</h1>
-											<h2 class="gold">Mighdoll</h2>
+											<h1 class="gold">Milo M</h1>
 											<div class="top-tagline">
 												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
-													Epic <br />
+													Mathematician <br />
 													Developer <br />
-													Coder <br />
-													Ninja
+													Wizzard <br />
+													Researcher
 												</h1>
 												<h2 class="subtitle is-size-4-desktop">
-													I'm a student that likes to code cool simulations (especially fluid simulations). I love bleeding edge things. I watch out
-													for bugs and won't rest until I squash them.
+													I'm a student that likes to code fun simulations of the world around me with bleeding edge tech. 
 												</h2>
 											</div>
 										</div>
@@ -136,7 +92,6 @@
 						</section>
 
 						<span id="portfolio-header"></span>
-
 						<section class="section projects is-medium is-white has-text-centered">
 							<div class="container">
 								<h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">
