--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<canvas id="c"></canvas>
 		<section id="top" class="hero is-fullheight">
 			<div class="hero-body">
-				<p style="width: 100%; font-size: 200px; line-height: 200px; font-family: 'Arcon'; color: white;">
+				<p id="main-text">
 					Hello! We're <span class="gold">CM-Tech</span>. <br />
 					We are programmers and mathematicians who create efficient and beautiful front end projects.
 				</p>
