--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
 													Mathematician <br />
 													Developer <br />
-													Ninja <br />
-													Artist
+													Artist <br />
+													Ninja
 												</h1>
 												<h2 class="subtitle is-size-4-desktop">
 													I have an appreciation for people, learning, and work with passion.
@@ -78,8 +78,8 @@
 												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
 													Mathematician <br />
 													Developer <br />
-													Wizzard <br />
-													Researcher
+													Researcher <br />
+													Wizzard
 												</h1>
 												<h2 class="subtitle is-size-4-desktop">
 													I'm a student that likes to code fun simulations of the world around me with bleeding edge tech. 
