--- a/index.html
+++ b/index.html
@@ -22,73 +22,39 @@
 			</div>
 		</section>
 
+		<section class="section">
+			<div class="container">
+				<div class="columns">
+				<div class="column is-half has-text-centered">
+						<h1 class="gold">Milo M</h1>
+						<div class="top-tagline">
+							<h2 class="subtitle is-size-4-desktop">
+								I'm a student that likes to code fun simulations of the world around me with bleeding edge tech.
+							</h2>
+						</div>
+				</div>
+			</div>
+			<div class="columns">
+				<div class="column is-half is-offset-half has-text-centered">
+							<h1 class="gold">Cole K</h1>
+							<div class="top-tagline">
+							
+								<h2 class="subtitle is-size-4-desktop">
+									I have an appreciation for people, learning, and work with passion.
+								</h2>
+							</div>
+				</div>
+			</div>
+			</div>
+		</section>
+
 		<div class="container" id="main-wrapper">
 			<div class="columns">
 				<div class="column">
 					<div class="box has-background-black">
-						<div class="spacer"></div>
-						<nav class="navbar is-transparent" id="navbar" role="navigation" aria-label="main navigation">
-							<div class="container">
-								<a class="navbar-item" href="#intro-header">
-									Intro
-								</a>
-								<a class="navbar-item" href="#people-header">
-									Team
-								</a>
-								<a class="navbar-item nav-center" href="#top-header">
-									<img src="/img/cm-logo-g.svg" class="nav-logo" alt="C" />
-								</a>
-								<a class="navbar-item nav-right" href="#portfolio-header">
-									Work
-								</a>
-								<a class="navbar-item nav-right">
-									Talk
-								</a>
-							</div>
-						</nav>
-
 						<span id="people-header"></span>
 						<section class="section people-section">
-							<div class="columns is-centered">
-								<div class="column is-four-fifths">
-									<div class="columns is-centered is-multiline">
-										<div class="column has-text-centered">
-											<figure class="image">
-												<img src="/img/ckgold-s.svg" class="start-logo" alt="C" />
-											</figure>
-											<h1 class="gold">Cole K</h1>
-											<div class="top-tagline">
-												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
-													Mathematician <br />
-													Developer <br />
-													Artist <br />
-													Ninja
-												</h1>
-												<h2 class="subtitle is-size-4-desktop">
-													I have an appreciation for people, learning, and work with passion.
-												</h2>
-											</div>
-										</div>
-										<div class="column has-text-centered">
-											<figure class="image">
-												<img src="//avatars2.githubusercontent.com/u/14153763?" class="start-logo" alt="C" />
-											</figure>
-											<h1 class="gold">Milo M</h1>
-											<div class="top-tagline">
-												<h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile">
-													Mathematician <br />
-													Developer <br />
-													Researcher <br />
-													Wizzard
-												</h1>
-												<h2 class="subtitle is-size-4-desktop">
-													I'm a student that likes to code fun simulations of the world around me with bleeding edge tech. 
-												</h2>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
+							<div class="columns is-centered"></div>
 						</section>
 
 						<span id="portfolio-header"></span>
