Scroolllll Co-authored-by: Modder Me <modderme123@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 	<body>
 		<canvas id="c"></canvas>
-		<section id="top" class="hero is-fullheight">
+		<div id="page"><div style="height:50vh;"></div>
+		<section id="top" class="hero">
 			<div class="hero-body">
 				<p id="main-text">
 					Hello! We're <span class="gold">CM-Tech</span>. <br />
@@ -25,24 +26,19 @@
 		<section class="section">
 			<div class="container">
 				<div class="columns">
-				<div class="column is-half has-text-centered">
-						<h1 class="gold">Milo M</h1>
-						<div class="top-tagline">
-							<h2 class="subtitle is-size-4-desktop">
-								I'm a student that likes to code fun simulations of the world around me with bleeding edge tech.
-							</h2>
-						</div>
+				<div class="milo column is-half has-text-centered">
+					<h1 class="gold">Milo M</h1>
+					<p class="top-tagline">
+							I'm a student that likes to code fun simulations of the world around me with bleeding edge tech.
+					</p>
 				</div>
 			</div>
 			<div class="columns">
-				<div class="column is-half is-offset-half has-text-centered">
-							<h1 class="gold">Cole K</h1>
-							<div class="top-tagline">
-							
-								<h2 class="subtitle is-size-4-desktop">
-									I have an appreciation for people, learning, and work with passion.
-								</h2>
-							</div>
+				<div class="cole column is-half is-offset-half has-text-centered">
+					<h1 class="gold">Cole K</h1>
+					<p class="top-tagline">
+							I have an appreciation for people, learning, and work with passion.
+					</p>
 				</div>
 			</div>
 			</div>
@@ -52,12 +48,6 @@
 			<div class="columns">
 				<div class="column">
 					<div class="box has-background-black">
-						<span id="people-header"></span>
-						<section class="section people-section">
-							<div class="columns is-centered"></div>
-						</section>
-
-						<span id="portfolio-header"></span>
 						<section class="section projects is-medium is-white has-text-centered">
 							<div class="container">
 								<h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">
@@ -81,7 +71,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+			</div></div>
 		<script src="js/index.js"></script>
 	</body>
 </html>
