scrolling bk toggle and improvements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="top" class="hero is-medium" data-aos="fade">
 				<div class="hero-body">
 					<p id="main-text">
-						Hello! We're <span class="gold">CM-Tech</span>. <br />
+						Hello! We're <img class="gilbert-img" src="./img/CM_TECH_GILBERT.png">. <br />
 						We are programmers and mathematicians who create efficient and beautiful front end projects.
 					</p>
 				</div>
