--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="container" id="main-wrapper">
 				<div class="columns">
 					<div class="column">
-						<div class="box has-background-black">
+						<div class="box">
 							<section class="section projects is-medium is-white has-text-centered" data-aos="fade">
 								<div class="container">
 									<h1 class="gold">
