--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 		<canvas id="c"></canvas>
 		<div id="page">
 			<div style="height: 50vh;"></div>
-			<section id="top" class="hero is-medium" data-aos="fade">
+			<section id="top" class="hero is-medium" data-aos="fade-up">
 				<div class="hero-body">
 					<p id="main-text">
-						Hello! We're <img class="gilbert-img" src="./img/CM_TECH_GILBERT.png">. <br />
+						Hello! We're <span class="inverted">CM-Tech</span>. <br />
 						We are programmers and mathematicians who create efficient and beautiful front end projects.
 					</p>
 				</div>
 			</section>
 
 			<section class="hero is-fullheight">
-				<div class="container">
+				<div class="container is-fluid">
 					<div class="columns">
-						<div data-aos="fade-right" class="column is-half has-text-centered">
+						<div data-aos="fade-right" class="column is-half has-text-left">
 							<h1 class="gold">Milo</h1>
 							<p class="top-tagline">
 								I'm a student that likes to code fun simulations of the world around me with bleeding edge tech.
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 					<div class="columns">
-						<div data-aos="fade-left" class="column is-half is-offset-half has-text-centered">
+						<div data-aos="fade-left" class="column is-half is-offset-half has-text-right">
 							<h1 class="gold">Cole</h1>
 							<p class="top-tagline">
 								I have an appreciation for people, learning, and work with passion.
@@ -45,11 +45,11 @@
 				</div>
 			</section>
 
-			<div class="container" id="main-wrapper">
+			<div class="container">
 				<div class="columns">
 					<div class="column">
 						<div class="box">
-							<section class="section projects is-medium is-white has-text-centered" data-aos="fade">
+							<section class="section projects is-medium has-text-centered" data-aos="fade">
 								<div class="container">
 									<h1 class="gold">
 										Mini Portfolio
