--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</div>
 					<div class="columns">
 						<div data-aos="fade-left" class="column is-half is-offset-half has-text-right">
-							<h1 class="gold">Cole</h1>
+							<h1 class="gold cole-text">Cole</h1>
 							<p class="top-tagline">
 								I have an appreciation for people, learning, and work with passion.
 							</p>
